--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "expect": "^1.20.2",
+    "faker": "^3.1.0",
     "mocha": "^3.0.0",
     "supertest": "^2.0.0"
   }
