--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node src/server.js",
     "test": "mocha"
   },
   "author": "Dustin Zeigler",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
     "mysql": "^2.11.1",
     "sequelize": "^3.23.6"
