--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mysql": "^2.11.1",
     "sequelize": "^3.23.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "dotenv": "^2.0.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.0.0",
     "expect": "^1.20.2",
     "faker": "^3.1.0",
     "mocha": "^3.0.0",
