fixed line breaks and a concatenated string in tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 	"rules": {
 		"new-cap": 0,
 		"prefer-template": 0,
-		"global-require": 0
+		"global-require": 0,
+		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}]
 	},
 	"globals": {
 		"describe": true,
