--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
 		"new-cap": 0,
 		"prefer-template": 0,
 		"global-require": 0,
-		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}]
+		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}],
+		"no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }]
 	},
 	"globals": {
 		"describe": true,
