--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,11 +10,12 @@
 		"new-cap": 0,
 		"prefer-template": 0,
 		"global-require": 0,
-		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}],
-		"no-unused-vars": ["error", { "varsIgnorePattern": "[iI]gnored" }]
+		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}]
 	},
 	"globals": {
 		"describe": true,
-		"it": true
+		"it": true,
+		"afterEach": true,
+		"beforeEach": true
 	}
 }
