--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,10 @@
     "react"
   ],
 	"rules": {
-		"new-cap": 0,
-		"prefer-template": 0,
+		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}],
 		"global-require": 0,
-		"import/no-extraneous-dependencies": ["error", {"optionalDependencies": false, "peerDependencies": false}]
+		"new-cap": 0,
+		"prefer-template": 0
 	},
 	"globals": {
 		"describe": true,
