--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "chalk": "^1.1.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mysql": "^2.11.1",
@@ -27,6 +26,7 @@
     "expect": "^1.20.2",
     "faker": "^3.1.0",
     "mocha": "^3.0.0",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "utility-tool": "^1.0.0"
   }
 }
