--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "app-store",
-  "version": "1.6.0",
-  "description": "Deployment of Web Applications",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "test": "mocha"
-  },
-  "author": "Dustin Zeigler",
-  "license": "ISC",
+  "author": "Dustin Zeigler <email@zeiglerd.com> (zeiglerd.com)",
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mysql": "^2.11.1",
-    "sequelize": "^3.23.6"
+    "sequelize": "^3.23.6",
+    "utility-tool": "^1.0.4"
   },
+  "description": "Deployment of Web Applications",
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react": "^6.1.2",
     "expect": "^1.20.2",
     "faker": "^3.1.0",
     "mocha": "^3.0.0",
-    "supertest": "^2.0.0",
-    "utility-tool": "^1.0.0"
-  }
+    "supertest": "^2.0.0"
+  },
+  "egnines": {
+    "node": "v6.3.1",
+    "npm": "3.10.3"
+  },
+  "license": "ISC",
+  "main": "src/server.js",
+  "name": "app-store",
+  "scripts": {
+    "start": "node src/server.js",
+    "test": "mocha"
+  },
+  "version": "1.6.0"
 }
