updated package.json to include engines and new version.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "mocha": "^3.0.0",
     "supertest": "^2.0.0"
   },
-  "egnines": {
-    "node": "v6.3.1",
-    "npm": "3.10.3"
+  "engines": {
+    "node": "v6.4.0",
+    "npm": "3.10.6"
   },
   "license": "ISC",
   "main": "src/server.js",
@@ -32,5 +32,5 @@
     "start": "node src/server.js",
     "test": "mocha"
   },
-  "version": "1.6.0"
+  "version": "1.8.0"
 }
