updated readme to pm2 start

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "main": "src/server.js",
   "name": "app-store",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "pm2 start src/server.js",
     "test": "mocha"
   },
   "version": "1.8.0"
