--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "localenvironment": "^1.0.2",
     "mysql": "^2.11.1",
     "sequelize": "^3.23.6",
     "utility-tool": "^1.0.4"
@@ -17,7 +18,6 @@
     "eslint-plugin-react": "^6.1.2",
     "expect": "^1.20.2",
     "faker": "^3.1.0",
-    "localenvironment": "^1.0.2",
     "mocha": "^3.0.0",
     "supertest": "^2.0.0"
   },
@@ -29,6 +29,7 @@
   "main": "src/server.js",
   "name": "app-store",
   "scripts": {
+    "preinstall": "npm i -g pm2@latest",
     "start": "node src/server.js",
     "test": "mocha"
   },
