--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "main": "src/server.js",
   "name": "app-store",
   "scripts": {
+    "preinstall": "npm install pm2 -g",
     "start": "pm2 start src/server.js",
     "test": "mocha"
   },
