--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "author": "Dustin Zeigler <email@zeiglerd.com> (zeiglerd.com)",
+  "bugs": {
+    "url": "https://github.com/zeiglerd/app-store/issues"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "localenvironment": "^1.0.2",
     "mysql": "^2.11.1",
     "sequelize": "^3.23.6",
-    "utility-tool": "^1.0.9"
+    "utility-tool": "^1.0.10"
   },
   "description": "Deployment of Web Applications",
   "devDependencies": {
@@ -27,28 +30,48 @@
     "supertest": "^2.0.0",
     "yargs": "^5.0.0"
   },
+  "directories": {
+    "test": "test"
+  },
   "engines": {
     "node": "v6.4.0",
     "npm": "3.10.6"
   },
+  "eslintConfig": {
+  	"env": {
+  		"node": true
+  	},
+  	"extends": "airbnb",
+  	"plugins": [
+      "react"
+    ],
+  	"rules": {
+  		"import/no-extraneous-dependencies": ["error", { "optionalDependencies": false, "peerDependencies": false }],
+  		"global-require": 0,
+  		"new-cap": 0,
+  		"no-console": ["error", { "allow": ["log"] }],
+  		"no-shadow": ["error", { "allow": ["doc", "docs", "err", "res"] }],
+  		"prefer-template": 0
+  	},
+  	"globals": {
+  		"describe": true,
+  		"it": true,
+  		"afterEach": true,
+  		"beforeEach": true
+  	}
+  },
+  "homepage": "https://github.com/zeiglerd/app-store#readme",
   "license": "ISC",
   "main": "src/server.js",
   "name": "app-store",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zeiglerd/app-store.git"
+  },
   "scripts": {
     "preinstall": "npm i -g pm2",
     "start": "pm2 start src/server.js",
     "test": "mocha"
   },
-  "version": "1.10.0",
-  "directories": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zeiglerd/app-store.git"
-  },
-  "bugs": {
-    "url": "https://github.com/zeiglerd/app-store/issues"
-  },
-  "homepage": "https://github.com/zeiglerd/app-store#readme"
+  "version": "1.10.0"
 }
