--- a/package.json
+++ b/package.json
@@ -38,27 +38,50 @@
     "npm": "3.10.6"
   },
   "eslintConfig": {
-  	"env": {
-  		"node": true
-  	},
-  	"extends": "airbnb",
-  	"plugins": [
+    "env": {
+      "node": true
+    },
+    "extends": "airbnb",
+    "plugins": [
       "react"
     ],
-  	"rules": {
-  		"import/no-extraneous-dependencies": ["error", { "optionalDependencies": false, "peerDependencies": false }],
-  		"global-require": 0,
-  		"new-cap": 0,
-  		"no-console": ["error", { "allow": ["log"] }],
-  		"no-shadow": ["error", { "allow": ["doc", "docs", "err", "res"] }],
-  		"prefer-template": 0
-  	},
-  	"globals": {
-  		"describe": true,
-  		"it": true,
-  		"afterEach": true,
-  		"beforeEach": true
-  	}
+    "rules": {
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "optionalDependencies": false,
+          "peerDependencies": false
+        }
+      ],
+      "global-require": 0,
+      "new-cap": 0,
+      "no-console": [
+        "error",
+        {
+          "allow": [
+            "log"
+          ]
+        }
+      ],
+      "no-shadow": [
+        "error",
+        {
+          "allow": [
+            "doc",
+            "docs",
+            "err",
+            "res"
+          ]
+        }
+      ],
+      "prefer-template": 0
+    },
+    "globals": {
+      "describe": true,
+      "it": true,
+      "afterEach": true,
+      "beforeEach": true
+    }
   },
   "homepage": "https://github.com/zeiglerd/app-store#readme",
   "license": "ISC",
