--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
       "react"
     ],
     "rules": {
+      "arrow-body-style": ["error", "always"],
+      "global-require": 0,
       "import/no-extraneous-dependencies": [
         "error",
         {
@@ -53,7 +55,6 @@
           "peerDependencies": false
         }
       ],
-      "global-require": 0,
       "new-cap": 0,
       "no-console": [
         "error",
